Add Host header to nginx proxy_pass

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -11,6 +11,7 @@ server {
   }
 
   location ~ ^/(api/v2|captcha|api/staff) {
+    proxy_set_header   Host $http_host;
     proxy_pass_request_headers on;
     proxy_pass http://nginx-api:8181;
   }
