Increase upload size

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -4,6 +4,7 @@ server {
   server_name localhost;
   error_log /var/log/nginx/project_error.log;
   access_log /var/log/nginx/project_access.log;
+  client_max_body_size 100M;
 
   location / {
     proxy_pass_request_headers on;
