--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "apexcharts": "^3.25.0",
     "autoprefixer": "^9.8.4",
     "axios": "^0.21.1",
+    "caniuse-lite": "^1.0.30001352",
     "concurrently": "^5.3.0",
     "core-js": "^3.6.5",
     "croppie": "^2.6.5",
@@ -27,7 +28,7 @@
     "jwt-decode": "^2.2.0",
     "path": "^0.12.7",
     "perfect-scrollbar": "^1.5.0",
-    "plyr": "^3.6.2",
+    "plyr": "^3.7.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-content-loader": "^5.1.0",
@@ -49,7 +50,7 @@
     "redux-thunk": "^2.3.0",
     "regenerator-runtime": "^0.13.5",
     "reselect": "^4.0.0",
-    "sass": "^1.32.6",
+    "sass": "^1.32.13",
     "sass-loader": "^10.1.1",
     "smoothscroll-polyfill": "^0.4.4",
     "striptags": "^3.1.1",
@@ -57,7 +58,7 @@
     "url": "^0.11.0",
     "wavesurfer.js": "^3.3.3",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
+    "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
